WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131935
REGRESSION(
r167591
): ARM64 and ARM traditional builds broken
https://bugs.webkit.org/show_bug.cgi?id=131935
Summary
REGRESSION(r167591): ARM64 and ARM traditional builds broken
Michael Saboff
Reported
2014-04-21 10:35:50 PDT
Changeset
r167591
made a call to store8(MacroAssembler::TrustedImm32, MacroAssembler::Address) that isn't implemented on ARM64 and ARM traditional platforms. Those functions need to be added.
Attachments
Patch
(3.97 KB, patch)
2014-04-21 10:39 PDT
,
Michael Saboff
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2014-04-21 10:39:24 PDT
Created
attachment 229806
[details]
Patch
Mark Hahnenberg
Comment 2
2014-04-21 10:41:57 PDT
Comment on
attachment 229806
[details]
Patch r=me
Michael Saboff
Comment 3
2014-04-21 11:11:14 PDT
Committed
r167599
: <
http://trac.webkit.org/changeset/167599
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug